--- a/match-report-2026-02-22-derby-athletic.html
+++ b/match-report-2026-02-22-derby-athletic.html
@@ -9,7 +9,7 @@
 
   <meta property="og:title" content="Match Report | Darley Abbey FC 0–5 Derby Athletic">
   <meta property="og:description" content="A hard-fought league fixture that ended in defeat, but one that showed the character, determination and growing identity of Darley Abbey FC.">
-  <meta property="og:image" content="https://darleyabbeyfc.com/assets/images/motm-brendon-tuckwood-2026-02-22.png">
+  <meta property="og:image" content="https://darleyabbeyfc.com/assets/images/starting-xi-2026-02-22.jpg">
   <meta property="og:url" content="https://darleyabbeyfc.com/match-report-2026-02-22-derby-athletic.html">
   <meta property="og:type" content="article">
   <meta property="article:published_time" content="2026-02-22">
@@ -122,7 +122,7 @@
     </header>
 
     <div class="article-hero-img">
-      <img src="assets/images/motm-brendon-tuckwood-2026-02-22.png" alt="Brendon Tuckwood Man of the Match graphic for Darley Abbey FC" loading="eager">
+      <img src="assets/images/starting-xi-2026-02-22.jpg" alt="Darley Abbey FC matchday graphic for the Derby Athletic fixture" loading="eager">
     </div>
 
     <div class="article-layout container">
